fix overlapping of textarea

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -25,6 +25,12 @@ ng-map {
   border: none;
 }
 
+textarea {
+    display:block;
+    margin-bottom:1em;
+    resize: none;
+}
+
 form {
   margin-bottom: 30px;
 }
